--- a/using.html
+++ b/using.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head></head>
+    <head>
+        <title>Document</title>
+        <link rel="stylesheet" href="./CSS/style.css">
+        <!--<style>
+            h1{
+                color: cadetblue;
+                background-color: bisque;
+            }
+        </style>-->
+    </head>
+    <body>
+        <!--<h1 style="color: aquamarine;">Title 1</h1>-->
+        <h1>Title 2</h1>
+        <h1>Title 3</h1>
+        <h2>Title 4</h2>
+    </body>
 </html>
