--- a/basicSelector.html
+++ b/basicSelector.html
@@ -22,10 +22,10 @@
         <p class="lead info"> 
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit ratione quas maxime delectus esse obcaecati recusandae fugiat eligendi, ducimus dolorum dolore consequatur iste molestias reprehenderit aut eum quis! Ad, voluptas.
         </p>
-        <p id="para1" class=" cart info"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero soluta, fugit deleniti ratione laboriosam, magnam, at unde quas nemo praesentium nam quaerat quis veniam vero eligendi sit earum! Hic, vel?
+        <p id="para1" class=" cart info"> Lorem ipsum <span class="primary">dolor</span>dolor sit amet consectetur adipisicing elit. Libero soluta, fugit deleniti ratione laboriosam, magnam, at unde quas nemo praesentium nam quaerat quis veniam vero eligendi sit earum! Hic, vel?
         </p>
         <p class="info">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Necessitatibus nemo enim sequi dolores similique neque ipsa vero non, illo odit dolorem expedita rem consequuntur. Delectus ullam quae similique est? Quisquam.
+            Lorem ipsum dolor, sit amet consectetur <span> elit</span> adipisicing elit. Necessitatibus nemo enim sequi dolores similique neque ipsa vero non, illo odit dolorem expedita rem consequuntur. Delectus ullam quae similique est? Quisquam.
         </p>
         <p>Test Paragraph</p>
         <a href="#" target="_blank">blank</a>
