--- a/marginPedding.html
+++ b/marginPedding.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <div class="box-1">Lorem ipsum dolor sit amet.</div>
+    <div class="box-2">Lorem ipsum dolor sit amet cart curt.</div>
 </body>
 </html>
