Pseudo.html and style8.css updated

--- a/pseudo.html
+++ b/pseudo.html
@@ -9,7 +9,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bytesized&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bytesized&family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -18,5 +18,8 @@
     <input type="text" name="text" id="text" placeholder="name">
     <br>
     <a href="#" id="Facebook" target="_blank">Facebook</a>
+    <p class="text1">
+        人類社会のすべての構成 Natus excepturi quasi voluptatem nisi veniam repudiandae corporis pariatur necessitatibus eligendi dolor dolores aspernatur atque rerum architecto sequi, eveniet laborum esse asperiores!
+    </p>
 </body>
 </html>
