--- a/flexbox.html
+++ b/flexbox.html
@@ -16,10 +16,11 @@
             width: 75%;
             margin: 0 auto;
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             justify-content:center;
             /*flex-wrap: wrap;*/ /*sığmayan kutuyu aşağıya koymamızı sağladı*/
-            justify-content:flex-start;
+            justify-content:space-around;
+            align-items: center;
             /*align-items:flex-end;*/
             min-height: 600px;
             background-color: black;
@@ -32,19 +33,36 @@
             border: 1px solid black;
             margin: 10px;
         }
+        .box-1{
+            background-color: aqua;
+            order: 1;
+            /*align-self: flex-start;*/
+            /*flex-grow: 1; /*1 + 2 + 3 = 6 yani 6 ya bölüp 1 parçasının boyutuna göre veriyor*/
+        }
+        .box-2{
+            background-color: blueviolet;
+            order: 0;
+            /*flex-grow: 2; /*1 + 2 + 3 = 6 yani 6 ya bölüp 2 parçasının boyutuna göre veriyor*/
+        }
+        .box-3{
+            background-image: url(./CSS/zort.jpg);
+            order: 2;
+            flex-grow: 1; /* flex grow yerine direk flex:1; yazarsak da aynısı oluyor*/
+            /*flex-grow:3 ; /*1 + 2 + 3 = 6 yani 6 ya bölüp 3 parçasının boyutuna göre veriyor*/
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="box">
+        <div class="box box-1">
             <h1>Article 1</h1>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="box">
+        <div class="box box-2">
             <h1>Article 1</h1>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="box">
+        <div class="box box-3">
             <h1>Article 1</h1>
             <p>Lorem ipsum dolor sit amet.</p>
         </div>
